# agreement

./: README.md
agreement/i18n/: it.po
agreement_account/i18n/: it.po
agreement_legal/: README.rst
agreement_legal/static/description/: index.html
agreement_legal/views/: agreement.xml
agreement_repair/i18n/: it.po
agreement_sale/i18n/: it.po
agreement_serviceprofile/models/: agreement_serviceprofile.py  product.py
agreement_serviceprofile/views/: agreement_serviceprofile.xml
setup/_metapackage/: pyproject.toml
