[project]
name = "odoo-addons-oca-agreement"
version = "17.0.20241122.0"
dependencies = [
    "odoo-addon-agreement>=17.0dev,<17.1dev",
    "odoo-addon-agreement_account>=17.0dev,<17.1dev",
    "odoo-addon-agreement_repair>=17.0dev,<17.1dev",
    "odoo-addon-agreement_sale>=17.0dev,<17.1dev",
]
classifiers=[
    "Programming Language :: Python",
    "Framework :: Odoo",
    "Framework :: Odoo :: 17.0",
]
